--- a/cdi_config_agent1.yml
+++ b/cdi_config_agent1.yml
@@ -3,14 +3,18 @@ agentParam:
   state_dim: 2
   state_indices: 
     - 1
-    - 2
   control_indices: 
     - 1
-  q_s_0: 0
-  p_l_0: 0 
-  p_mf_0: 0
-  q_s_dot_0: 0
-  u_s_0: 0
+  q_mf:
+    1: 0.0
+  p_l: 
+    1: 0.0
+  p_mf:
+    1: 0.0
+  q_mf_dot: 
+    1: 0.0
+  u_mf: 
+    1: 0.0
 algParam:
   gamma: 1.0
   Gamma: 1.0
@@ -20,17 +24,19 @@ algParam:
 odeParam:
   integrateTol: 10**-3
   maxIter: 400
-bbParam:
-  name: agent2
-    q_s_0: 0.0
-    p_l_0: 0.0
-    p_mf_0: 0.0
-    q_s_dot_0:
-    u_s_0: 0.0
-  name: agent3
-    q_s_0: 0.0
-    p_l_0: 0.0
-    p_mf_0: 0.0
-    q_s_dot_0: 0.0
-    u_s_0: 0.0
+bbValues:
+  q_mf:
+    1: 0.0
+    2: 0.0
+  p_l: 
+    1: 0.0
+    2: 0.0
+  p_mf:
+    1: 0.0
+    2: 0.0
+  q_mf_dot: 
+    1: 0.0
+    2: 0.0
+  u_mf: 
+    1: 0.0
 
