--- a/cdi_config_agent1.yml
+++ b/cdi_config_agent1.yml
@@ -1,20 +1,20 @@
 agentParam:
   name: agent1
-  state_dim: 2
+  state_dim: 1
   state_indices: 
     - 1
   control_indices: 
     - 1
-  q_mf:
-    1: 0.0
-  p_l: 
-    1: 0.0
-  p_mf:
-    1: 0.0
-  q_mf_dot: 
-    1: 0.0
-  u_mf: 
-    1: 0.0
+  q_s_0:
+    - 0.0 
+  p_l_0: 
+    - 0.0 
+  p_mf_0:
+    - 0.0 
+  q_s_dot_0: 
+    - 0.0 
+  u_s_0: 
+    - 0.0 
 algParam:
   gamma: 1.0
   Gamma: 1.0
@@ -26,17 +26,17 @@ odeParam:
   maxIter: 400
 bbValues:
   q_mf:
-    1: 0.0
-    2: 0.0
+    '1': 0.0
+    '2': 0.0
   p_l: 
-    1: 0.0
-    2: 0.0
+    '1': 0.0
+    '2': 0.0
   p_mf:
-    1: 0.0
-    2: 0.0
+    '1': 0.0
+    '2': 0.0
   q_mf_dot: 
-    1: 0.0
-    2: 0.0
+    '1': 0.0
+    '2': 0.0
   u_mf: 
-    1: 0.0
+    '1': 0.0
 
